# plateau

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BACKLOG.md  DESIGN.md  VISION.md
docs/launch/: devto.md
plateau/: __init__.py  analysis.py  parsing.py
scripts/: build_site.py
site/: README.md  index.html
site/css/: style.css
site/js/: app.js  pyodide-loader.js
tests/: test_analysis.py  test_classification.py  test_parsing.py  test_regression.py
