[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "plateau"
version = "0.1.0"
description = "Detects real lift plateaus from pasted training logs via rolling-regression significance testing"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Charlie Krug" }]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.setuptools.packages.find]
include = ["plateau*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
